# study-project

./: CMakeLists.txt  answers.json  config.json  readme.md  requests.json
include/: InvertedIndex.h  SearchServer.h  converterJSON.h
nlohmann_json/.github/workflows/: codeql-analysis.yml  labeler.yml  scorecards.yml
resources/: file001.txt  file002.txt  file004.txt
src/: InvertedIndex.cpp  SearchServer.cpp  converterJSON.cpp  main.cpp
